fix: bulk inserts instead of single inserts in POST exercise & symptoms
